Revision history for Gimp-Perl extension.

1.093 Tue Jun 15 21:48:48 CEST 1999
	- possible workaround for Gimp::Util::gimp_layer_get_position.
	- WRAP, SMEAR and BLACK were not being exported.
	- fixed small bug in pixelmap.
	- implemented gimp_query_procedure in XS.
	- scm2perl had broken cdr and cddr stubs...
        - fixed examples/font_table.
        - applied fixes from Lupe Christoph.
        - allow uppercase letters in hex colour specifications.
        - gimp_text_fontname ignored the image argument in
          compatibility mode (patch by Dov Grobgeld).
        - another solaris portability fix from Dov.
        - fixed xachshadows.

1.092 Wed Jun  2 14:52:29 CEST 1999
	- testsuite failed when !HAVE_PDL (and the whole package broke on
          systems with underpowered dynamic linkers).
        - gtk-1.0.x and gimp < 1.0.4 are no longer "officially" supported.
        - added COMPRESSION_*-constants for file_tiff.
        - added examples/pixelmap, needs doc!
        - probably fixed SIGPIPE problem in gimpdoc.
        - fixed pager bug in gimpdoc.
        - cleaned filehandle handling in Gimp/Net.pm.
        - streamlined config code again.
        - updated examples/parasite-editor, examples/mirrorsplit,
          examples/PDB.
        - Gimp::Net was broken (it used GIMP_PATH instead of just GIMP).

1.091 Sun May 23 13:21:34 CEST 1999
	- include a fake typemap.pdl.

1.09 Fri May 21 14:12:02 CEST 1999
        - added gimpdoc, a simple man-like help viewer.
	- corrected PDL version check to work with version 2.001.
        - new file Net.xs, containing protocol serializer.
        - new, faster and leaner protocol (bumped protocol version number).
        - added SvPV_nolen to ppport.h and made use of it everywhere.
        - renamed nolib => Module.
        - streamlined warning messages as not to scare the people away.
        - fixed a bug in check_for_typoe (correct TRUE and FALSE).